source/webapp/sites/all/themes/checkbook3/css/global.css
/* ... */
/********************************************
***   CONTRACT TOTALS MENU TABLE STYLING  ***
********************************************/

.contracts-oge-spending-bottom td div >  .float-clear + .float-clear{
	margin-top: 20px;
}

.panel-panel.grid-12 .bottom-nav-container.panel-pane.pane-node,
.pane-contracts-cta-history,
.float-clear{
    float:left;
    clear:both;
    width:100%;
}



.toggleVendorContainer{
    float:left;
    clear:both;
    margin-bottom:10px;
}
.nyc_totals_links table{
    width:100%;
}
.nyc_totals_links table tbody{
    border:none;
}
.nyc_totals_links td{
    border: 1px solid #c5c5c5;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 2px;
    text-align: center;
    margin:0;
    padding: 0;
    background-color: #f4f4f4;
    text-transform: none;
    font-style: italic;
    font-weight: bold;
    font-size: 14px;
    line-height: 1.5em;
    vertical-align: baseline;
}
span.count,
span.dollars{
    font-size: 12px;
    font-weight: normal;
    font-style: normal;
}
.nyc_totals_links{
    color:#596c7d;
    cursor:default;
    text-decoration: none;
    font-weight: bold;
    font-size: 14px;
}
.nyc_totals_links a,
.nyc_totals_links a:link,
.nyc_totals_links a:visited,
.nyc_totals_links a:hover {
    color: #596c7d;
    cursor: pointer;
    text-decoration: none;
    font-weight: bold;
    font-size: 14px;
    display: block;
    padding: 2px 10px;
}
.nyc_totals_links .count a,
.nyc_totals_links .dollars a,
.nyc_totals_links .count a:link,
.nyc_totals_links .dollars a:link,
.nyc_totals_links .count a:visited,
.nyc_totals_links .dollars a:visited,
.nyc_totals_links .count a:hover,
.nyc_totals_links .dollars a:hover {
    color: #596c7d;
    cursor: pointer;
    text-decoration: none;
    font-weight: normal;
}
.nyc_totals_links td.active a{
    color:#ffffff;
    text-shadow: 1px 2px #1A88CF;
    display: block;
    padding: 2px 10px;
}
.nyc_totals_links td.active{
    background: url("../images/active-tile2.png") repeat-x 0 0 #25a9dc;
    border: 1px solid #0071bc;
}
.nyc_totals_links td.active div.indicator{
    background:url("../images/blue-carrot.png") no-repeat center 0;
    height: 10px;
    margin-bottom: -10px;
    top: 0;
}
#nyc-spending .nyc_totals_links a,
#nyc-spending .nyc_totals_links a:link,
#nyc-spending .nyc_totals_links a:visited,
#nyc-spending .nyc_totals_links a:hover{
    padding: 7px 10px;
}
#nyc-spending .nyc_totals_links td{
    width:16.66%;
}
a.bottomContainerToggle {
    margin-top: 15px;
    float: right;
}
a.toggleVendor{
    margin-top: 15px;
    float: left;
}
a.toggleAgency{
    margin-top: 15px;
    float: left;
}
span.toggleVendor{
    margin-top: 15px;
    float: left;
    font-size: 13px;
    font-weight: bold;
}
span.toggleAgency{
    margin-top: 15px;
    float: left;
    font-size: 13px;
    font-weight: bold;
}
span.toggle{
    margin-top: 15px;
    float: left;
    font-size: 13px;
}
div.bottomContainer{
    margin-top: 15px;
    width:100%;
    float:left;
    clear:both;
}

/***************************************
***   ADVANCED SEARCH FORM STYLING   ***
***************************************/

/* Advanced Search - Create Alerts */

#region-header-first span.advanced-search-create-alert {
    background: url("../images/create-alert-large.png") no-repeat scroll center bottom 0px transparent;
    float: right;
    margin: -34px -190px 0px 0px;
    height: 36px;
    line-height: 88px;
    cursor: pointer;
    color: #1F82C9;
}

#ui-dialog-title-block-checkbook-advanced-search-checkbook-advanced-search-form span.active{

}
#ui-dialog-title-block-checkbook-advanced-search-checkbook-advanced-search-form span.inactive{
    opacity: 0.3;
}
#checkbook_advanced_search_result_iframe {

}

/* Advanced Search */

#ui-dialog-title-block-checkbook-advanced-search-checkbook-advanced-search-form{
    line-height:20px;
}
#block-checkbook-advanced-search-checkbook-advanced-search-form {
    display: none;
}
#checkbook-advanced-search-form .column {
    display: block;
    vertical-align: top;
    float:left;
    width: 346px;
}
#checkbook-advanced-search-form .column.column-left.checkbook,
#checkbook-advanced-search-form .column.column-left.checkbook-oge{
    clear: left;
}
#checkbook-datafeeds-data-feed-wizard .column-right,
#checkbook-advanced-search-form .column-right,
#checkbook-datafeeds-data-feed-wizard--2 .column-right{
    margin-left: 20px;
}
#checkbook-advanced-search-form .form-item,
#checkbook-advanced-search-form #budget-advanced-search .datafield,
#checkbook-advanced-search-form #revenue-advanced-search .datafield
{
    height: 50px;
    margin-bottom: 0;
    margin-top: 0;
}
#checkbook-advanced-search-form label {
    float: left;
}
#checkbook-advanced-search-form select,
#checkbook-advanced-search-form input {
    float: right;
    width: 195px;
}
#checkbook-advanced-search-form input[type="radio"]{
    float: left;
    width: auto;
    margin-right: 5px;
}
#checkbook-advanced-search-form .form-item-payroll-amount-type input[type="radio"]{
    float:none;
}

#checkbook-advanced-search-form #edit-spending-submit,
#checkbook-advanced-search-form #edit-spending-clear,
#checkbook-advanced-search-form #edit-contracts-submit,
#checkbook-advanced-search-form #edit-contracts-clear,
#checkbook-advanced-search-form #edit-spending-submit--2,
#checkbook-advanced-search-form #edit-spending-clear--2,
#checkbook-advanced-search-form #edit-contracts-submit--2,
#checkbook-advanced-search-form #edit-contracts-clear--2,
#checkbook-advanced-search-form #edit-payroll-submit,
#checkbook-advanced-search-form #edit-payroll-clear,
#checkbook-advanced-search-form #edit-budget-submit,
#checkbook-advanced-search-form #edit-budget-clear,
#checkbook-advanced-search-form #edit-revenue-submit,
#checkbook-advanced-search-form #edit-revenue-clear{
    float:none;
}

/* range input styles */
#checkbook-advanced-search-form .ranges {
    float: right;
}
/* ... */

